# courses_building-generative-ai-applications-with-gradio

./: .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg
notebooks/: lecture1_nlp_tasks_interface.ipynb
scripts/: setup_environment.sh
